<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Type Launcher</string>
    <string name="app_search_hint">Type an app name%1$s</string>
    <string name="app_search_clear_button_description">Clear search text</string>
    <string name="settings_open_button_description">Open settings</string>
    <string name="play_update_badge_description">New version available</string>
    <string name="play_update_banner_title">New version available</string>
    <string name="play_update_banner_body">Tap to update from Google Play.</string>
    <string name="play_update_banner_update_button">Update</string>
    <string name="play_update_banner_updating_title">Updating…</string>
    <string name="play_update_banner_updating_body">Downloading from Google Play.</string>
    <string name="play_update_banner_downloaded_title">Update ready</string>
    <string name="play_update_banner_downloaded_body">Tap to restart and install.</string>
    <string name="play_update_banner_restart_button">Restart</string>
    <string name="play_update_banner_dismiss_description">Dismiss update banner</string>
    <string name="play_update_banner_restart_failed">Couldn\'t restart to install</string>
    <string name="installed_apps_list_label">Installed apps</string>
    <string name="dock_apps_list_label">Dock</string>
    <string name="dock_apps_hint">Long press apps to dock</string>
    <string name="dock_add_button_description">Add app to dock</string>
    <string name="dock_add_button_hint">Find an app in the list above,\nlong press then tap Dock</string>
    <string name="dock_recents_empty_hint">No recent apps yet</string>
    <string name="dock_recents_description">Recent apps</string>
    <string name="dock_recents_scroll_more_hint">Scroll for more recent apps</string>
    <string name="apps_list_scroll_more_hint">Scroll for more apps</string>
    <string name="scroll_up_for_more_hint">Scroll up for more</string>
    <string name="scroll_down_for_more_hint">Scroll down for more</string>
    <string name="agenda_title">Agenda</string>
    <string name="agenda_events_list_label">Calendar agenda events</string>
    <string name="agenda_permission_message">Allow calendar access to show your agenda.</string>
    <string name="agenda_permission_button">Allow calendar</string>
    <string name="agenda_empty_state">No all-day or upcoming events right now.</string>
    <string name="agenda_all_day_label">All day</string>
    <string name="agenda_day_today">Today</string>
    <string name="agenda_day_tomorrow">Tomorrow</string>
    <string name="agenda_event_untitled">Untitled event</string>
    <string name="agenda_swipe_hint">Swipe right to return home</string>
    <string name="app_label_with_work_prefix">Work %1$s</string>
    <string name="app_menu_app_info">App info</string>
    <string name="app_menu_dock">Dock</string>
    <string name="app_menu_undock">Undock</string>
    <string name="app_menu_reset_rank">Reset rank</string>
    <string name="app_menu_edit">Edit</string>
    <string name="app_menu_hide">Hide</string>
    <string name="app_menu_uninstall" tools:ignore="MissingTranslation">Uninstall</string>
    <string name="app_menu_uninstall_unavailable" tools:ignore="MissingTranslation">Can\'t uninstall this app</string>
    <string name="app_menu_remove_shortcut" tools:ignore="MissingTranslation">Remove</string>
    <string name="app_menu_shortcut_unavailable" tools:ignore="MissingTranslation">Can\'t open this shortcut right now</string>
    <string name="app_menu_remove_shortcut_failed" tools:ignore="MissingTranslation">Couldn\'t remove this shortcut</string>
    <string name="shortcut_already_listed" tools:ignore="MissingTranslation">Already in app list</string>
    <string name="pin_shortcut_dialog_title" tools:ignore="MissingTranslation">Add to app list?</string>
    <string name="pin_shortcut_dialog_add" tools:ignore="MissingTranslation">Add</string>
    <string name="pin_shortcut_dialog_cancel" tools:ignore="MissingTranslation">Cancel</string>
    <string name="shortcut_pinned" tools:ignore="MissingTranslation">Added to app list</string>
    <string name="shortcut_pin_failed" tools:ignore="MissingTranslation">Couldn\'t add shortcut</string>
    <string name="app_menu_move_out">Move out</string>
    <string name="app_menu_open_folder">Open folder</string>
    <string name="app_menu_explode">Ungroup</string>
    <string name="dock_folder_content_description">Folder</string>
    <string name="dock_folder_close_description">Close folder</string>
    <string name="app_menu_dismiss">Dismiss</string>
    <string name="app_menu_settings">Settings</string>
    <string name="edit_app_dialog_title">Edit app</string>
    <string name="edit_app_dialog_label">Display name</string>
    <string name="edit_app_dialog_original">Original name: %1$s</string>
    <string name="edit_app_dialog_package">Package: %1$s</string>
    <string name="edit_app_dialog_save">Save</string>
    <string name="edit_app_dialog_cancel">Cancel</string>
    <string name="edit_app_dialog_restore">Restore defaults</string>
    <string name="edit_app_dialog_choose_icon">Choose icon</string>
    <string name="edit_app_dialog_clear_icon">Use default icon</string>
    <string name="edit_app_dialog_pick_icon_unavailable">No app available to pick an icon</string>
    <string name="edit_app_dialog_badge_label">Badge</string>
    <string name="edit_app_dialog_choose_badge">Choose badge</string>
    <string name="edit_app_dialog_badge_default_label">Default</string>
    <string name="badge_picker_title">Choose badge</string>
    <string name="badge_picker_default">Default</string>
    <string name="badge_preset_home">Home</string>
    <string name="badge_preset_work">Work</string>
    <string name="badge_preset_school">School</string>
    <string name="badge_preset_travel">Travel</string>
    <string name="badge_preset_world">World</string>
    <string name="widgets_add_button_description">Add widget</string>
    <string name="widgets_picker_title">Add widget</string>
    <string name="widgets_picker_subtitle">Choose a widget for the home screen</string>
    <string name="widgets_picker_loading">Loading widgets…</string>
    <string name="widgets_picker_expand_app">Expand</string>
    <string name="widgets_picker_collapse_app">Collapse</string>
    <string name="widgets_picker_done">Done</string>
    <string name="widgets_picker_empty_title">No widgets available</string>
    <string name="widgets_picker_empty_body">Install apps with widgets to add them here.</string>
    <string name="widgets_picker_no_matches_title">No matching widgets</string>
    <string name="widgets_picker_no_matches_body">Try a shorter name or clear the filter.</string>
    <string name="widgets_picker_filter_hint">Type an app or widget name</string>
    <string name="widgets_picker_filter_clear_description">Clear filter</string>
    <string name="widgets_picker_size_label">%1$dx%2$d</string>
    <string name="widgets_picker_padded_note">Very small, will be padded</string>
    <plurals name="widgets_picker_widget_count">
        <item quantity="one">%d widget</item>
        <item quantity="other">%d widgets</item>
    </plurals>
    <string name="widgets_preview_unavailable">Preview unavailable</string>
    <string name="widgets_picker_unavailable">Widget picker unavailable</string>
    <string name="widgets_unavailable">Widget unavailable</string>
    <string name="widgets_restore_action">Tap to restore %1$s widget</string>
    <string name="widgets_restore_work_profile_unavailable" tools:ignore="MissingTranslation">Work profile unavailable</string>
    <string name="widget_menu_resize">Resize</string>
    <string name="widget_menu_move_up">Move up</string>
    <string name="widget_menu_move_down">Move down</string>
    <string name="widget_menu_wider">Wider</string>
    <string name="widget_menu_narrower">Narrower</string>
    <string name="widget_menu_remove">Remove</string>
    <string name="widget_resize_handle_description">Drag to resize widget</string>
    <string name="widget_resize_width_handle_description">Drag to change widget width</string>
    <string name="navigate_to_agenda">Open agenda</string>
    <string name="navigate_to_home">Back to home</string>
    <string name="calendar_permission_required_title">Calendar permission required</string>
    <string name="calendar_permission_status">Action required</string>
    <string name="agenda_empty_title">Your agenda is clear</string>
    <string name="home_search_title">Find an app</string>
    <string name="dock_title">Dock</string>
    <string name="dock_subtitle">Up to %1$d apps fit here</string>
    <string name="home_empty_title">No matches</string>
    <string name="home_empty_body">Try a shorter app name or clear the search.</string>
    <string name="home_search_play_store">Search Play Store</string>
    <string name="app_store_search_unavailable">No app store available</string>
    <string name="agenda_permission_title">Show calendar events</string>
    <string name="navigate_home_description">Return to launcher search</string>
    <string name="app_actions_description">App actions</string>
    <string name="settings_title">Settings</string>
    <string name="settings_done_button">Done</string>
    <string name="settings_default_launcher_button">Set as default launcher</string>
    <string name="settings_already_default_launcher_button">Already default launcher</string>
    <string name="settings_app_list_layout_title">App list/grid style</string>
    <string name="settings_app_list_layout_option_name_beside">Name beside</string>
    <string name="settings_app_list_layout_option_name_below">Name below</string>
    <string name="settings_app_list_layout_option_icon_only">Icon only</string>
    <string name="settings_dock_layout_title">Dock style</string>
    <string name="settings_app_list_sort_title">Sort apps by</string>
    <string name="settings_app_list_sort_option_usage">Usage ↓</string>
    <string name="settings_app_list_sort_option_usage_reversed">Usage ↑</string>
    <string name="settings_app_list_sort_option_name">Name ↓</string>
    <string name="settings_app_list_sort_option_name_reversed">Name ↑</string>
    <string name="settings_dock_enabled_title">Show dock</string>
    <string name="settings_work_dock_enabled_title">Show work dock</string>
    <string name="settings_work_dock_disabled_toast">Work profile is paused</string>
    <string name="settings_keyboard_auto_show_title">Show keyboard automatically</string>
    <string name="settings_show_wallpaper_title">Show wallpaper</string>
    <string name="settings_wallpaper_title">Wallpaper</string>
    <string name="settings_change_wallpaper_button">Change</string>
    <string name="settings_change_wallpaper_button_description">Change wallpaper</string>
    <string name="settings_home_widgets_title">Widgets on home screen</string>
    <string name="settings_home_widgets_edit_title">Home widgets</string>
    <string name="settings_home_widgets_edit_button">Edit</string>
    <string name="settings_home_widgets_edit_button_description">Edit home widgets</string>
    <string name="settings_wallpaper_picker_unavailable">Wallpaper picker unavailable</string>
    <string name="settings_show_agenda_title">Show agenda</string>
    <string name="settings_search_contacts_title">Search contacts</string>
    <string name="settings_search_calendar_title">Search calendar events</string>
    <string name="settings_call_using_title">Call using</string>
    <string name="settings_call_using_option_phone_app">Phone app</string>
    <string name="settings_call_using_option_ask">Ask which app</string>
    <string name="contact_result_starred_description">Starred contact</string>
    <string name="contact_action_call">Call</string>
    <string name="contact_action_message">Message</string>
    <string name="contact_action_email">Email</string>
</resources>